--- a/index.css
+++ b/index.css
@@ -8,6 +8,106 @@ html, body {
     font-family: 'Inter', sans-serif;
 }
 
+body {
+    color: var(--lighter);
+    background: var(--darker);
+}
+
+
+/* =================
+    Layout 
+   ================= */
+
+
+
+
+/* =================
+    Navigation 
+   ================= */
+
+nav {
+    padding: 0.5em 1em;
+    margin: 1.5em;
+    font-size: 1rem;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    padding: 0;
+    margin: 0 auto;
+    justify-content: center;
+    gap: 1.5em;
+}
+
+.nav-selected,
+.nav-selected:visited {
+    color: var(--primary-color);
+    font-weight: 700;
+}
+
+
+/* =================
+    Search bar 
+   ================= */
+
+.search-container {
+    position: relative;
+    padding: 0 1em;
+}
+
+.search-input {
+    width: 100%;
+    background: var(--dark);
+    border: none;
+    border-radius: 0.5em;
+    padding: 0.75em 1em 0.75em 2.5em;
+    color: var(--lighter);
+    font-size: 1rem;
+}
+
+.search-input:focus {                           
+    border: 2px solid --primary-color;
+    outline: none;
+}
+
+.search-input::placeholder {
+    color: var(--light);
+}
+
+.search-icon {
+    position: absolute;
+    top: 13.5px;
+    left: 2rem;
+    fill: var(--light);
+}
+
+
+/* =================
+    Trending
+   ================= */
+
+.carousel {
+    position: relative;
+}
+
+.carousel-container {
+    overflow-x: scroll;
+    -webkit-overflow-scrolling: touch; /* para suavidad en iOS */
+}
+
+
+
+/* =================
+    Text 
+   ================= */
+
+a, 
+a:visited {
+    text-decoration: none;
+    color: inherit;
+}
+
 
 /* =================
     Miscellaneous 
@@ -24,4 +124,12 @@ html, body {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
+}
+
+:root {
+    --darker: #111317;
+    --dark: #25262A;
+    --primary-color: #FFFF57;
+    --light: #B8B9BD;
+    --lighter: #ffffff;
 }
