--- a/index.css
+++ b/index.css
@@ -89,18 +89,36 @@ nav ul {
 
 .carousel {
     position: relative;
+    margin: 1.5em 0;
 }
 
 .carousel-container {
     overflow-x: scroll;
     -webkit-overflow-scrolling: touch; /* para suavidad en iOS */
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
+
+        .carousel-container::-webkit-scrollbar {
+            display: none;
+        }
+
+        .carousel-container::-webkit-scrollbar-thumb {
+            background-color: #4a4a4a;
+            border-radius: 10px;
+        }
+
+        .carousel-container::-webkit-scrollbar-track {
+            background-color: #2a2a2a;
+        }
 
 .carousel-list {
     list-style: none;
     padding: 0;
     display: flex;
-    gap: 1.5em;
+    gap: 1em;
+    margin: 0;
+    padding: 0 1em;
 }
 
 .carousel-item {
@@ -108,6 +126,107 @@ nav ul {
     flex-shrink: 0;
     flex-basis: 80vw;
     max-width: 300px;
+}
+
+.carousel-item:last-child {
+    margin-right: 1em;
+}
+
+.game-card {
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    position: relative;
+    padding: 1em;
+    height: 352px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+}
+
+.game-card::after {
+    content: '';
+    position: absolute;
+    border-radius: 8px;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    background: linear-gradient(to bottom, transparent 0, rgba(0, 0, 0, 0.8) 100%);
+}
+
+.game-card-top-elements,
+.game-card-header, 
+.game-labels {
+    position: relative;
+    z-index: 2;
+}
+
+.game-card-top-elements {
+    position: absolute;
+    top: 1em;
+    left: 1em;
+    right: 1em;
+    display: flex;
+    justify-content: space-between;
+}
+
+.rating, 
+.favorite-button {
+    background: var(--darker);
+    padding: 0.375em 0.5em;
+    color: var(--primary-color);
+    font-weight: 700;
+    border-radius: 4px;
+    border: none;
+    display: flex;
+    gap: 0.5em;
+    align-items: center;
+    justify-content: center;
+}
+
+.favorite-button {
+    cursor: pointer;
+}
+
+.favorite-button:hover {
+    background: var(--like);
+    transition: 300ms;
+}
+
+.game-card-header {
+    margin: 1em 0;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+}
+
+.game-card-header h3,
+.game-card-header p {
+    margin: 0;
+}
+
+.game-labels {
+    display: flex;
+    gap: 0.5em;
+}
+
+.game-tag {
+    padding: 0.25em 0.375em;
+    background: var(--dark);
+    border-radius: 4px;
+}
+
+.game-card p {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+            line-clamp: 3;
+    -webkit-box-orient: vertical;
 }
 
 
@@ -146,4 +265,6 @@ a:visited {
     --primary-color: #FFFF57;
     --light: #B8B9BD;
     --lighter: #ffffff;
+    --like: #FF5757;
+    --delete: #9B1616;
 }
